AC_INIT(x.c)

AC_PROG_CC
AC_PATH_XTRA

CPPFLAGS="${CPPFLAGS-} ${X_CPPFLAGS-}"
CFLAGS="${CFLAGS-} ${X_CFLAGS-}"
LIBS="${X_PRE_LIBS-} ${LIBS-} ${X_LIBS-} ${X_EXTRA_LIBS-}"

AC_PROG_MAKE_SET
AC_PROG_INSTALL

AC_CHECK_LIB(Xext,XextCreateExtension)

AC_CHECK_HEADERS(X11/extensions/xidle.h, [
  AC_DEFINE(HAVE_XIDLE)
], [], [
#include <X11/X.h>
#include <X11/Xutil.h>
])

AC_CHECK_HEADERS(X11/extensions/scrnsaver.h, [
  AC_SEARCH_LIBS(XScreenSaverQueryExtension,Xext Xss XExExt,[AC_DEFINE(HAVE_MIT_SCREENSAVER)])
], [], [
#include <X11/X.h>
#include <X11/Xutil.h>
])

AC_CHECK_HEADERS(X11/extensions/Xinerama.h, [
  AC_SEARCH_LIBS(XineramaQueryExtension,Xext Xinerama,[AC_DEFINE(HAVE_XINERAMA)])
], [], [
#include <X11/X.h>
#include <X11/Xutil.h>
])

AC_CHECK_HEADERS(X11/extensions/Xrandr.h, [
  AC_SEARCH_LIBS(XRRSelectInput,Xext Xrandr,[AC_DEFINE(HAVE_XRANDR)])
], [], [
#include <X11/X.h>
#include <X11/Xutil.h>
])

AC_CHECK_HEADERS(X11/extensions/xf86dga.h, [
  AC_SEARCH_LIBS(XF86DGADirectVideo,Xext Xxf86dga,[AC_DEFINE(HAVE_XF86DGA)])
], [], [
#include <X11/X.h>
#include <X11/Xutil.h>
])


AC_SUBST_FILE(makefile_top)
AC_SUBST_FILE(makefile_bottom)
makefile_top=$srcdir/Makefile.top
makefile_bottom=$srcdir/Makefile.bottom

AC_OUTPUT(Makefile)

